[gd_scene load_steps=23 format=2]

[ext_resource path="res://scripts/HUD/PauseMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/sound/sfx/ChooseMenu.wav" type="AudioStream" id=2]
[ext_resource path="res://assets/sound/sfx/SelectMenu.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/graphics/interface/labels/ShortLabel.png" type="Texture" id=4]
[ext_resource path="res://assets/fonts/Apparitions.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://assets/graphics/interface/labelSelectors/Select.png" type="Texture" id=6]
[ext_resource path="res://assets/graphics/interface/labelSelectors/Hover.png" type="Texture" id=7]
[ext_resource path="res://assets/graphics/interface/labelSelectors/arrow-point-to-right0.png" type="Texture" id=8]
[ext_resource path="res://assets/animations/PauseLargeArrowLoop.tres" type="Animation" id=9]
[ext_resource path="res://assets/animations/FadeOut.tres" type="Animation" id=10]

[sub_resource type="DynamicFont" id=1]

size = 90
use_mipmaps = false
use_filter = true
font_data = ExtResource( 5 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="Theme" id=2]

default_font = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]

size = 60
use_mipmaps = false
use_filter = true
font_data = ExtResource( 5 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="Theme" id=4]

default_font = SubResource( 3 )

[sub_resource type="SpriteFrames" id=5]

animations = [ {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "Select",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "Hover",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "None",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=6]

size = 50
use_mipmaps = false
use_filter = true
font_data = ExtResource( 5 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="Theme" id=7]

default_font = SubResource( 6 )

[sub_resource type="DynamicFont" id=8]

size = 90
use_mipmaps = false
use_filter = true
font_data = ExtResource( 5 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="Theme" id=9]

default_font = SubResource( 8 )

[sub_resource type="DynamicFont" id=10]

size = 60
use_mipmaps = false
use_filter = true
font_data = ExtResource( 5 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="Theme" id=11]

default_font = SubResource( 10 )

[sub_resource type="Animation" id=12]

resource_name = "PauseShortArrowLoop"
length = 0.5
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("ArrowRight:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 831, 240 ), Vector2( 836, 240 ), Vector2( 831, 240 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ArrowLeft:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.25, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 715, 240 ), Vector2( 710, 240 ), Vector2( 715, 240 ) ]
}

[node name="PauseMenu" type="Control" index="0"]

pause_mode = 2
light_mask = 4
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1370.0
margin_bottom = 774.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Visibility" ]
hoverMenu = ExtResource( 2 )
selectMenu = ExtResource( 3 )

[node name="CanvasLayer" type="Node2D" parent="." index="0"]

light_mask = 4
z_index = 3
_sections_unfolded = [ "Visibility", "Z Index" ]

[node name="FadeBackground" type="ColorRect" parent="CanvasLayer" index="0"]

modulate = Color( 1, 1, 1, 0.839765 )
light_mask = 4
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1376.0
margin_bottom = 775.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0, 0, 0, 1 )
_sections_unfolded = [ "Visibility" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Pause" type="Control" parent="CanvasLayer" index="1"]

light_mask = 4
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Visibility" ]

[node name="Background" type="TextureRect" parent="CanvasLayer/Pause" index="0"]

light_mask = 4
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 802.0
margin_top = 195.0
margin_right = 1062.0
margin_bottom = 311.0
rect_rotation = 90.0
rect_scale = Vector2( 1.75, 2.25 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 4 )
expand = true
stretch_mode = 0
_sections_unfolded = [ "Rect", "Visibility" ]

[node name="Title" type="Label" parent="CanvasLayer/Pause" index="1"]

self_modulate = Color( 0, 0, 0, 1 )
light_mask = 4
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 584.0
margin_top = 223.0
margin_right = 749.0
margin_bottom = 317.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = SubResource( 2 )
text = "PAUSA"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Theme", "Visibility" ]

[node name="Options" type="Label" parent="CanvasLayer/Pause" index="2"]

self_modulate = Color( 0, 0, 0, 1 )
light_mask = 4
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 567.0
margin_top = 353.0
margin_right = 767.0
margin_bottom = 618.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = SubResource( 4 )
text = "Continuar
Reiniciar
Opções
Sair da fase"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Theme", "Visibility" ]

[node name="Cursor" type="AnimatedSprite" parent="CanvasLayer/Pause" index="3"]

light_mask = 4
position = Vector2( 663, 389 )
scale = Vector2( 0.4, 0.4 )
frames = SubResource( 5 )
animation = "Hover"
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="Help" type="Control" parent="CanvasLayer" index="2"]

editor/display_folded = true
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -332.0
margin_top = -156.0
margin_right = -292.0
margin_bottom = -116.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="Background" type="TextureRect" parent="CanvasLayer/Help" index="0"]

light_mask = 4
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 606.0
margin_top = 157.0
margin_right = 866.0
margin_bottom = 257.0
rect_scale = Vector2( 3, 7.5 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 4 )
expand = true
stretch_mode = 0
_sections_unfolded = [ "Rect", "Visibility" ]

[node name="Title" type="Label" parent="CanvasLayer/Help" index="1"]

self_modulate = Color( 0, 0, 0, 1 )
light_mask = 4
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 654.0
margin_top = 243.0
margin_right = 821.0
margin_bottom = 337.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = SubResource( 2 )
text = "AJUDA"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Theme", "Visibility" ]

[node name="Options" type="Label" parent="CanvasLayer/Help" index="2"]

self_modulate = Color( 0, 0, 0, 1 )
light_mask = 4
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 656.0
margin_top = 359.0
margin_right = 806.0
margin_bottom = 851.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = SubResource( 7 )
text = "Mensagens
Movimento
EPI
Resíduos
Tratamento
Expediente
Saúde

Voltar"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Theme", "Visibility" ]

[node name="Options" type="Control" parent="CanvasLayer" index="3"]

visible = false
light_mask = 4
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 18.0
margin_top = 15.0
margin_right = 58.0
margin_bottom = 55.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Visibility" ]

[node name="TextureRect" type="NinePatchRect" parent="CanvasLayer/Options" index="0"]

light_mask = 4
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 378.0
margin_top = 77.0
margin_right = 941.0
margin_bottom = 670.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 4 )
patch_margin_left = 30
patch_margin_top = 20
patch_margin_right = 30
patch_margin_bottom = 20
_sections_unfolded = [ "Patch Margin", "Visibility" ]

[node name="Title" type="Label" parent="CanvasLayer/Options" index="1"]

modulate = Color( 0, 0, 0, 1 )
light_mask = 4
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 580.0
margin_top = 97.0
margin_right = 731.0
margin_bottom = 191.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = SubResource( 9 )
text = "Opções"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Theme", "Visibility" ]

[node name="ScreenMode" type="Control" parent="CanvasLayer/Options" index="2"]

light_mask = 4
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect", "Visibility" ]

[node name="Name" type="Label" parent="CanvasLayer/Options/ScreenMode" index="0"]

modulate = Color( 0, 0, 0, 1 )
light_mask = 4
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 417.0
margin_top = 226.0
margin_right = 629.0
margin_bottom = 290.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = SubResource( 11 )
text = "Modo de Tela"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Theme", "Visibility" ]

[node name="Value" type="Label" parent="CanvasLayer/Options/ScreenMode" index="1"]

modulate = Color( 0, 0, 0, 1 )
light_mask = 4
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 684.0
margin_top = 226.0
margin_right = 896.0
margin_bottom = 290.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = SubResource( 11 )
text = "Tela cheia"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Theme", "Visibility" ]

[node name="MasterVolume" type="Control" parent="CanvasLayer/Options" index="3"]

light_mask = 4
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 80.0
margin_right = 40.0
margin_bottom = 120.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect", "Visibility" ]

[node name="Name" type="Label" parent="CanvasLayer/Options/MasterVolume" index="0"]

modulate = Color( 0, 0, 0, 1 )
light_mask = 4
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 417.0
margin_top = 226.0
margin_right = 629.0
margin_bottom = 290.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = SubResource( 11 )
text = "Volume Geral"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Theme", "Visibility" ]

[node name="Value" type="Label" parent="CanvasLayer/Options/MasterVolume" index="1"]

modulate = Color( 0, 0, 0, 1 )
light_mask = 4
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 684.0
margin_top = 226.0
margin_right = 896.0
margin_bottom = 290.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = SubResource( 11 )
text = "100"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Theme", "Visibility" ]

[node name="MusicVolume" type="Control" parent="CanvasLayer/Options" index="4"]

light_mask = 4
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 160.0
margin_right = 40.0
margin_bottom = 200.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect", "Visibility" ]

[node name="Name" type="Label" parent="CanvasLayer/Options/MusicVolume" index="0"]

modulate = Color( 0, 0, 0, 1 )
light_mask = 4
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 417.0
margin_top = 226.0
margin_right = 629.0
margin_bottom = 290.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = SubResource( 11 )
text = "Volume Música"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Theme", "Visibility" ]

[node name="Value" type="Label" parent="CanvasLayer/Options/MusicVolume" index="1"]

modulate = Color( 0, 0, 0, 1 )
light_mask = 4
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 684.0
margin_top = 226.0
margin_right = 896.0
margin_bottom = 290.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = SubResource( 11 )
text = "100"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Theme", "Visibility" ]

[node name="EffectVolume" type="Control" parent="CanvasLayer/Options" index="5"]

light_mask = 4
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 240.0
margin_right = 40.0
margin_bottom = 280.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect", "Visibility" ]

[node name="Name" type="Label" parent="CanvasLayer/Options/EffectVolume" index="0"]

modulate = Color( 0, 0, 0, 1 )
light_mask = 4
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 417.0
margin_top = 226.0
margin_right = 629.0
margin_bottom = 290.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = SubResource( 11 )
text = "Volume Efeitos"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Theme", "Visibility" ]

[node name="Value" type="Label" parent="CanvasLayer/Options/EffectVolume" index="1"]

modulate = Color( 0, 0, 0, 1 )
light_mask = 4
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 684.0
margin_top = 226.0
margin_right = 896.0
margin_bottom = 290.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = SubResource( 11 )
text = "100"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Theme", "Visibility" ]

[node name="Return" type="Control" parent="CanvasLayer/Options" index="6"]

light_mask = 4
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -2.0
margin_top = 350.0
margin_right = 38.0
margin_bottom = 390.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect", "Visibility" ]

[node name="Name" type="Label" parent="CanvasLayer/Options/Return" index="0"]

modulate = Color( 0, 0, 0, 1 )
light_mask = 4
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 532.0
margin_top = 226.0
margin_right = 776.0
margin_bottom = 290.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = SubResource( 11 )
text = "Voltar"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Theme", "Visibility" ]

[node name="Arrows" type="Node2D" parent="CanvasLayer/Options" index="7"]

light_mask = 4
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="ArrowRight" type="TextureRect" parent="CanvasLayer/Options/Arrows" index="0"]

modulate = Color( 0.117647, 0.105882, 0.105882, 1 )
light_mask = 4
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 885.02
margin_top = 240.0
margin_right = 924.02
margin_bottom = 279.0
rect_pivot_offset = Vector2( 19, 19 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 8 )
expand = true
stretch_mode = 0
_sections_unfolded = [ "Rect", "Visibility" ]

[node name="ArrowLeft" type="TextureRect" parent="CanvasLayer/Options/Arrows" index="1"]

modulate = Color( 0.117647, 0.105882, 0.105882, 1 )
light_mask = 4
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 660.98
margin_top = 240.0
margin_right = 699.98
margin_bottom = 279.0
rect_rotation = 180.0
rect_pivot_offset = Vector2( 19, 19 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 8 )
expand = true
stretch_mode = 0
_sections_unfolded = [ "Rect", "Visibility" ]

[node name="ArrowAnimation" type="AnimationPlayer" parent="CanvasLayer/Options/Arrows" index="2"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/PauseLargeArrowLoop = ExtResource( 9 )
anims/PauseShortArrowLoop = SubResource( 12 )
blend_times = [  ]

[node name="Cursor" type="AnimatedSprite" parent="CanvasLayer/Options" index="8"]

light_mask = 4
position = Vector2( 518, 260 )
scale = Vector2( 0.4, 0.4 )
frames = SubResource( 5 )
animation = "Hover"
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="FadeAnimation" type="AnimationPlayer" parent="CanvasLayer" index="4"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/FadeOut = ExtResource( 10 )
blend_times = [  ]

[node name="Fade" type="ColorRect" parent="CanvasLayer" index="5"]

self_modulate = Color( 1, 1, 1, 0 )
light_mask = 4
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1376.0
margin_bottom = 775.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0, 0, 0, 1 )
_sections_unfolded = [ "Visibility" ]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="." index="1"]

stream = null
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "SFX"


